<resources>
    <string name="app_name">Food Runner</string>
    <string name="mobile_number_10_digits">Mobile Number (10 digits)</string>
    <string name="don_t_have_an_account">Don\'t have an account</string>


    <string name="preference_file_name">User Preferences</string>
    <string name="name">Name</string>
    <string name="email_address">Email Address</string>
    <string name="delivery_address">Delivery Address</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="register">Register</string>
    <string name="home">Home</string>
    <string name="my_profile">My Profile</string>
    <string name="favourite_restaurant">Favourite Restaurant</string>
    <string name="faq_s">FAQ\'s</string>
    <string name="logout">Logout</string>

    <string name="open_drawer">Open Drawer</string>
    <string name="close_drawer">Close Drawer</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add">Add</string>
    <string name="remove">Remove</string>
    <string name="dish_name">Dish Name</string>
    <string name="otp_4_characters">OTP (4 characters)</string>
    <string name="new_password_min_4_characters">New Password (Min. 4 characters)</string>
    <string name="submit">Submit</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="this_foodrunner_app_is_fully_working_food_ordering_app_with_the_list_of_top_restaurants_from_where_the_user_can_food_according_to_his_her_taste">This FoodRunner App is fully working food ordering app with the list of top Restaurants from where the user can food according to his/her taste.</string>
    <string name="q_3_credits">Q.3 Credits?</string>
    <string name="q_2_about_the_app">Q.2 About the App</string>
    <string name="harsh_k_wavikar">Harsh. k. Wavikar</string>
    <string name="q_1_name_the_developer_of_the_app">Q.1 Name the developer of the app?</string>
    <string name="thanks_to_internshala_training_for_the_beautifull_course_and_thanking_the_instructors_at_internshala_for_solving_my_doubts">Thanks to Internshala Training for the beautifull course, and thanking the instructors at internshala for solving my doubts.</string>
    <string name="q_4_how_to_order_food">Q.4 How to Order food?</string>
    <string name="select_the_restaurant_of_your_choice_select_dishes_that_you_want_to_have_for_lunch_dinner_click_on_proceed_to_cart_make_payment_you_will_recieve_your_order_in_30_35_min"><![CDATA[Select the Restaurant of your choice --> Select dishes that you want to have for lunch/dinner --> click on proceed to cart --> Make payment --> You will recieve your order in 30-35 min.]]></string>
    <string name="confirm_order">Confirm Order</string>
    <string name="ordering_from">Ordering From :</string>
    <string name="order_placed_successfully">Order placed Successfully</string>
    <string name="no_order_found">No order found</string>
    <string name="your_previous_orders_are_listed_below">Your previous orders are listed below :</string>
    <string name="looks_like_you_haven_t_made_your_order_yet">Looks like you haven\'t made your order yet</string>
    <string name="restaurant_name">Restaurant Name</string>
    <string name="date">date</string>
</resources>