<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/home"
            android:icon="@drawable/ic_home"
            android:title="@string/home" />

        <item
            android:id="@+id/myProfile"
            android:icon="@drawable/ic_person"
            android:title="@string/my_profile" />

        <item
            android:id="@+id/favouriteRestaurant"
            android:icon="@drawable/ic_favourite"
            android:title="@string/favourite_restaurant" />

        <item
            android:id="@+id/orderHistory"
            android:icon="@drawable/ic_order_history"
            android:title="Order History" />

        <item
            android:id="@+id/faqs"
            android:icon="@drawable/ic_faq"
            android:title="@string/faq_s" />

        <item
            android:id="@+id/logOut"
            android:icon="@drawable/ic_logout"
            android:title="@string/logout" />

    </group>

</menu>