<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.RegistrationActivity"
    android:background="@color/red_variant_1">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/registrationToolbar"
        android:layout_width="match_parent"
        android:layout_height="58dp"
        android:layout_marginBottom="74dp"
        android:background="@color/red_variant_2"
        android:minHeight="?attr/actionBarSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_alignParentTop="true"
        app:layout_constraintVertical_bias="0.0"
        app:titleTextColor="#ffffff" />
    <EditText
        android:id="@+id/edtName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/registrationToolbar"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:background="@color/white"
        android:drawableStart="@drawable/ic_person"
        android:drawablePadding="5dp"
        android:hint="@string/name"
        android:inputType="text"
        android:minHeight="48dp"
        android:minLines="1"
        android:padding="10dp"
        android:textColor="@color/black"
        android:textColorHint="#757575" />

    <EditText
        android:id="@+id/edtEmailAddress"
        android:layout_below="@+id/edtName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="5dp"
        android:background="@color/white"
        android:drawableStart="@drawable/ic_email"
        android:drawablePadding="5dp"
        android:hint="@string/email_address"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        android:minLines="1"
        android:padding="10dp"
        android:textColor="@color/black"
        android:textColorHint="#757575" />

    <EditText
        android:id="@+id/edtMobileNumber"
        android:layout_below="@+id/edtEmailAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="5dp"
        android:background="@color/white"
        android:drawableStart="@drawable/ic_mobile_number"
        android:drawablePadding="5dp"
        android:hint="@string/mobile_number_10_digits"
        android:inputType="phone"
        android:minHeight="48dp"
        android:minLines="1"
        android:padding="10dp"
        android:maxLength="10"
        android:textColor="@color/black"
        android:textColorHint="#757575" />

    <EditText
        android:id="@+id/edtDeliveryAddress"
        android:layout_below="@+id/edtMobileNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="5dp"
        android:background="@color/white"
        android:drawableStart="@drawable/ic_delivery_address"
        android:drawablePadding="5dp"
        android:hint="@string/delivery_address"
        android:inputType="text"
        android:minHeight="48dp"
        android:minLines="1"
        android:padding="10dp"
        android:textColor="@color/black"
        android:textColorHint="#757575" />

    <EditText
        android:id="@+id/edtPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edtDeliveryAddress"
        android:layout_marginStart="5dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="5dp"
        android:background="@color/white"
        android:drawableStart="@drawable/ic_password_lock"
        android:drawablePadding="5dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:maxLength="10"
        android:minHeight="48dp"
        android:minLines="1"
        android:padding="10dp"
        android:textColor="@color/black"
        android:textColorHint="#757575" />

    <EditText
        android:id="@+id/edtConfirmPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edtPassword"
        android:layout_marginStart="5dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="5dp"
        android:background="@color/white"
        android:drawableStart="@drawable/ic_password_lock"
        android:drawablePadding="5dp"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"
        android:maxLength="10"
        android:minHeight="48dp"
        android:minLines="1"
        android:padding="10dp"
        android:textColor="@color/black"
        android:textColorHint="#757575" />

    <Button
        android:id="@+id/btnRegister"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_below="@+id/edtConfirmPassword"
        android:layout_marginStart="5dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="5dp"
        android:backgroundTint="#D52B00"
        android:padding="5dp"
        android:text="@string/register"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold" />

</RelativeLayout>