<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/red_variant_1"
    tools:context=".activity.ResetPasswordActivity">

    <TextView
        android:id="@+id/tvEnterOTPBelow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="60dp"
        android:text="Enter the received OTP below"
        android:textColor="@color/white"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/edtOTP"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvEnterOTPBelow"
        android:layout_marginStart="10dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="10dp"
        android:background="@color/white"
        android:hint="@string/otp_4_characters"
        android:inputType="number"
        android:maxLength="4"
        android:minHeight="48dp"
        android:padding="10dp"
        android:textColor="@color/black"
        android:textColorHint="#A8A8A8" />
    <EditText
        android:id="@+id/edtNewPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edtOTP"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:background="@color/white"
        android:hint="@string/new_password_min_4_characters"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:padding="10dp"
        android:textColor="@color/black"
        android:textColorHint="#A8A8A8" />

    <EditText
        android:id="@+id/edtConfirmNewPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edtNewPassword"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:background="@color/white"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:padding="10dp"
        android:textColor="@color/black"
        android:textColorHint="#A8A8A8" />

    <Button
        android:id="@+id/btnSubmit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/red_variant_2"
        android:text="@string/submit"
        android:textColor="@color/white"
        android:layout_below="@+id/edtConfirmNewPassword"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:textStyle="bold"
        android:textSize="18sp"
        android:textAllCaps="false"/>




</RelativeLayout>