<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.FAQsFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/q_1_name_the_developer_of_the_app"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/red_variant_2"
                android:textSize="16sp" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/harsh_k_wavikar"
                android:paddingTop="10dp"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/black"
                android:textSize="16sp"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="20dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_marginTop="20dp"
                android:layout_height="wrap_content"
                android:text="@string/q_2_about_the_app"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/red_variant_2"
                android:textSize="16sp" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="10dp"
                android:text="@string/this_foodrunner_app_is_fully_working_food_ordering_app_with_the_list_of_top_restaurants_from_where_the_user_can_food_according_to_his_her_taste"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/black"
                android:textSize="16sp"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="20dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/q_3_credits"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/red_variant_2"
                android:textSize="16sp" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/thanks_to_internshala_training_for_the_beautifull_course_and_thanking_the_instructors_at_internshala_for_solving_my_doubts"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/black"
                android:textSize="16sp"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="20dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/q_4_how_to_order_food"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/red_variant_2"
                android:textSize="16sp" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/select_the_restaurant_of_your_choice_select_dishes_that_you_want_to_have_for_lunch_dinner_click_on_proceed_to_cart_make_payment_you_will_recieve_your_order_in_30_35_min"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/black"
                android:textSize="16sp"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="20dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="Q.5 How to add restaurants to favourites?"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/red_variant_2"
                android:textSize="16sp" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Use the heart shaped icon to add restaurants to favourites. You can view all favourite restaurants in the favourite page."
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/black"
                android:textSize="16sp"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="20dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/q_1_name_the_developer_of_the_app"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/red_variant_2"
                android:textSize="16sp" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/harsh_k_wavikar"
                android:paddingTop="10dp"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/black"
                android:textSize="16sp"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="20dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_marginTop="20dp"
                android:layout_height="wrap_content"
                android:text="@string/q_2_about_the_app"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/red_variant_2"
                android:textSize="16sp" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="10dp"
                android:text="@string/this_foodrunner_app_is_fully_working_food_ordering_app_with_the_list_of_top_restaurants_from_where_the_user_can_food_according_to_his_her_taste"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/black"
                android:textSize="16sp"
                />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray"
                android:layout_marginBottom="20dp"
                android:layout_marginTop="50dp"
                />

        </LinearLayout>
    </ScrollView>
</FrameLayout>