<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.OrderHistoryFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/llOrders"
        android:visibility="visible">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/your_previous_orders_are_listed_below"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:padding="8dp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#90919191"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerOrderHistory"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="5dp" />

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/rlNoOrderFound"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:visibility="gone">

        <ImageView
            android:id="@+id/imgNoOrderFound"
            android:layout_width="300dp"
            android:layout_height="300dp"
            android:src="@drawable/no_order_found"
            android:layout_centerInParent="true"/>

        <TextView
            android:id="@+id/tvNoOrder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/imgNoOrderFound"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="-30dp"
            android:text="@string/no_order_found"
            android:textAppearance="?android:attr/lineSpacingExtra"
            android:textColor="@color/black"
            android:textSize="22sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvNoOrder"
            android:fontFamily="sans-serif-smallcaps"
            android:gravity="center"
            android:text="@string/looks_like_you_haven_t_made_your_order_yet"
            android:textColor="@color/black"
            android:textSize="18sp" />



    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/historyProgressLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:visibility="gone">

        <ProgressBar
            android:id="@+id/historyProgressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"/>
    </RelativeLayout>

</RelativeLayout>