<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="80dp"
    android:layout_margin="5dp"
    android:background="@color/white"
    android:elevation="10dp"
    app:cardCornerRadius="5dp">

       <LinearLayout
        android:id="@+id/llMenuItem"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#FBFBFB"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:weightSum="6">

        <TextView
            android:id="@+id/tvSrNo"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center"
            android:text="1"
            android:textColor="@color/black" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3.5"
            android:layout_gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvDishName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:text="@string/dish_name"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvCostForOneDish"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Rs. 100"
                android:textColor="#7C7C7C"
                android:textSize="14sp" />

        </LinearLayout>

        <Button
            android:id="@+id/btnAddToCart"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_weight="1.5"
            android:backgroundTint="@color/red_variant_1"
            android:text="@string/add"
            android:textAllCaps="false"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@android:color/white"
            android:textSize="10sp"
            android:visibility="visible"
            tools:ignore="SmallSp,TextContrastCheck,TouchTargetSizeCheck" />

        <Button
            android:id="@+id/btnRemoveFromCart"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_marginLeft="6dp"
            android:layout_marginRight="6dp"
            android:layout_weight="1.5"
            android:backgroundTint="#4CAF50"
            android:text="@string/remove"
            android:visibility="gone"
            android:textAllCaps="false"
            android:textSize="10dp"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@android:color/white"/>

    </LinearLayout>

</androidx.cardview.widget.CardView>