<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.LoginActivity"
    android:background="@color/red_variant_1">

    <ImageView
        android:id="@+id/imgLogo"
        android:layout_width="match_parent"
        android:layout_height="140dp"
        android:layout_marginTop="50dp"
        android:src="@drawable/food_runner_logo" />

    <EditText
        android:id="@+id/edtMobileNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imgLogo"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:background="@color/white"
        android:drawableLeft="@drawable/ic_mobile_number"
        android:drawablePadding="5dp"
        android:hint="@string/mobile_number_10_digits"
        android:inputType="phone"
        android:maxLength="10"
        android:minHeight="48dp"
        android:minLines="1"
        android:padding="10dp"
        android:textColor="@color/black"
        android:textColorHint="#757575" />

    <EditText
        android:id="@+id/edtPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edtMobileNumber"
        android:layout_marginStart="5dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="5dp"
        android:background="@color/white"
        android:drawableLeft="@drawable/ic_password_lock"
        android:drawablePadding="5dp"
        android:hint="Password"
        android:inputType="textPassword"
        android:maxLength="10"
        android:minHeight="48dp"
        android:minLines="1"
        android:padding="10dp"
        android:textColor="@color/black"
        android:textColorHint="#757575" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_below="@+id/edtPassword"
        android:layout_marginStart="5dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="5dp"
        android:backgroundTint="#D52B00"
        android:padding="5dp"
        android:text="Login"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvForgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnLogin"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:padding="6dp"
        android:text="@string/forgot_password"
        android:textColor="#FFFFFF" />


    <TextView
        android:id="@+id/tvDontHaveAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="15dp"
        android:layout_marginStart="100dp"
        android:text="@string/don_t_have_an_account"
        android:textColor="@color/black" />

    <TextView
        android:id="@+id/tvSignUpNow"
        android:layout_width="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="15dp"
        android:layout_toRightOf="@+id/tvDontHaveAccount"
        android:text="SignUp Now"
        android:textColor="#FFFFFF"
        android:textStyle="bold" />
</RelativeLayout>